@@ -1,3 +1,6 @@
+      
+       * removed BAS0 support so old clients will NOT be able to connect starting from this version;
+       * edited the motd a bit
        * fixed #276197;     
        * fixed #255040;
        * fixed #259694;
